fix(v1.2.0):更改broker module 为plugs 插件目录