@@ -443,7 +443,7 @@
             <dependency>
                 <groupId>com.github.oshi</groupId>
                 <artifactId>oshi-core</artifactId>
-                <version>5.3.7</version>
+                <version>6.1.6</version>
             </dependency>
 
             <dependency>
@@ -550,9 +550,11 @@
                     <target>${maven.compiler.target}</target>
                     <encoding>UTF-8</encoding>
                     <excludes>libs</excludes>
-                    <compilerArgs>
-                        <arg>--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED</arg>
-                    </compilerArgs>
+
+<!--                    java17 之后启动不起来,java: 不允许在使用 -release 时从系统模块 java.base 导出程序包: -->
+<!--                    <compilerArgs>-->
+<!--                        <arg>&#45;&#45;add-exports=java.base/sun.security.pkcs=ALL-UNNAMED</arg>-->
+<!--                    </compilerArgs>-->
                     <compilerArguments>
                         <verbose/>
                         <!-- 将jdk的依赖jar打入项目中，这样项目中使用的jdk的依赖就尅正常使用 -->
